--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,24 @@ theme: minima
 plugins:
   - jekyll-feed
 
+
+collections:
+  categories:
+    output: true
+    permalink: /category/:name/
+
+
+
+
+
+
+
+
+
+
+
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
